--- a/property-rental-main-app/src/app/components/tabs/tabs.component.html
+++ b/property-rental-main-app/src/app/components/tabs/tabs.component.html
@@ -1,5 +1,5 @@
-<div class="card mt-5 bg-dark text-light shadow-lg rounded">
-    <!-- Nav tabs -->
+<!-- <div class="card mt-5 bg-dark text-light shadow-lg rounded ">
+
     <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
       <li *ngFor="let tabData of tabDataList" class="nav-item" role="presentation">
         <button
@@ -18,8 +18,7 @@
         </button>
       </li>
     </ul>
-  
-    <!-- Tab panes -->
+
     <div class="tab-content p-4 bg-secondary rounded-bottom" id="myTabContent">
       <div
         *ngFor="let tabData of tabDataList"
@@ -34,4 +33,4 @@
       </div>
     </div>
   </div>
-  
+   -->
