--- a/property-rental-main-app/src/app/components/property-photos/property-photos.component.css
+++ b/property-rental-main-app/src/app/components/property-photos/property-photos.component.css
@@ -1,7 +1,11 @@
-.image-item {
-    display: block; /* or inline-block */
-    max-width: 100%;
-    /* Ensure there is no overriding margin or padding */
-    margin: 0;
-    padding: 0;
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: black; /* Makes the icons black */
+  width: 50px; /* Increases icon width */
+  height: 50px; /* Increases icon height */
+  border-radius: 50%; /* Makes the icons circular (optional) */
 }
