--- a/property-rental-main-app/src/app/components/property-photos/property-photos.component.html
+++ b/property-rental-main-app/src/app/components/property-photos/property-photos.component.html
@@ -1,3 +1,54 @@
-<div class="d-flex flex-wrap justify-content-center gap-4 p-4" *ngFor="let photo of photos">
+<!-- <div class="d-flex flex-wrap justify-content-center gap-4 p-4" *ngFor="let photo of photos">
    <img *ngIf="photo.isEnabled" class="img-thumbnail" [src]="photo.url" alt="Photo" style="height: auto;">
-</div>
+</div> -->
+
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+   <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img
+          class="d-block mx-auto img-fluid"
+          style="max-width: 70%; max-height: 500px; object-fit: cover;"
+          src="https://images1.apartments.com/i2/b-GMW_rbJh4QqsusEnhmHt4GL3F9Vzl5_ZkjLhWtIbI/116/presidential-towers-chicago-il-building-photo.jpg?p=1"
+          alt="First slide"
+        />
+      </div>
+      <div class="carousel-item">
+        <img
+          class="d-block mx-auto img-fluid"
+          style="max-width: 70%; max-height: 500px; object-fit: cover;"
+          src="https://images1.apartments.com/i2/b-GMW_rbJh4QqsusEnhmHt4GL3F9Vzl5_ZkjLhWtIbI/116/presidential-towers-chicago-il-building-photo.jpg?p=1"
+          alt="Second slide"
+        />
+      </div>
+      <div class="carousel-item">
+        <img
+          class="d-block mx-auto img-fluid"
+          style="max-width: 70%; max-height: 500px; object-fit: cover;"
+          src="https://images1.apartments.com/i2/b-GMW_rbJh4QqsusEnhmHt4GL3F9Vzl5_ZkjLhWtIbI/116/presidential-towers-chicago-il-building-photo.jpg?p=1"
+          alt="Third slide"
+        />
+      </div>
+    </div>
+    
+    <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#carouselExampleControls"
+    data-bs-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#carouselExampleControls"
+    data-bs-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+
+  
+ </div>
+ 
