--- a/property-rental-main-app/src/app/components/property-photos/property-photos.component.html
+++ b/property-rental-main-app/src/app/components/property-photos/property-photos.component.html
@@ -1,54 +1,67 @@
-<!-- <div class="d-flex flex-wrap justify-content-center gap-4 p-4" *ngFor="let photo of photos">
-   <img *ngIf="photo.isEnabled" class="img-thumbnail" [src]="photo.url" alt="Photo" style="height: auto;">
-</div> -->
 
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-   <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img
-          class="d-block mx-auto img-fluid"
-          style="max-width: 70%; max-height: 500px; object-fit: cover;"
-          src="https://images1.apartments.com/i2/b-GMW_rbJh4QqsusEnhmHt4GL3F9Vzl5_ZkjLhWtIbI/116/presidential-towers-chicago-il-building-photo.jpg?p=1"
-          alt="First slide"
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          class="d-block mx-auto img-fluid"
-          style="max-width: 70%; max-height: 500px; object-fit: cover;"
-          src="https://images1.apartments.com/i2/b-GMW_rbJh4QqsusEnhmHt4GL3F9Vzl5_ZkjLhWtIbI/116/presidential-towers-chicago-il-building-photo.jpg?p=1"
-          alt="Second slide"
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          class="d-block mx-auto img-fluid"
-          style="max-width: 70%; max-height: 500px; object-fit: cover;"
-          src="https://images1.apartments.com/i2/b-GMW_rbJh4QqsusEnhmHt4GL3F9Vzl5_ZkjLhWtIbI/116/presidential-towers-chicago-il-building-photo.jpg?p=1"
-          alt="Third slide"
-        />
-      </div>
+<div
+  id="carouselExampleControls"
+  class="carousel slide bg-light shadow rounded-lg overflow-hidden"
+  data-bs-ride="carousel"
+  style="max-width: 80%; margin: auto;"
+>
+  <div class="carousel-inner">
+    <!-- First Slide -->
+    <div class="carousel-item active">
+      <img
+        class="d-block mx-auto img-fluid rounded"
+        style="max-width: 100%; height: 500px; object-fit: cover;"
+        src="https://images1.apartments.com/i2/b-GMW_rbJh4QqsusEnhmHt4GL3F9Vzl5_ZkjLhWtIbI/116/presidential-towers-chicago-il-building-photo.jpg?p=1"
+        alt="First slide"
+      />
     </div>
-    
-    <button
+
+    <!-- Second Slide -->
+    <div class="carousel-item">
+      <img
+        class="d-block mx-auto img-fluid rounded"
+        style="max-width: 100%; height: 500px; object-fit: cover;"
+        src="https://images1.apartments.com/i2/MZzLT1wlZo3Mm2Do3lbsBj2JPLYDZQgSyWJNGdM0O3c/116/presidential-towers-chicago-il-interior-photo.jpg?p=1"
+        alt="Second slide"
+      />
+    </div>
+
+    <!-- Third Slide -->
+    <div class="carousel-item">
+      <img
+        class="d-block mx-auto img-fluid rounded"
+        style="max-width: 100%; height: 500px; object-fit: cover;"
+        src="https://images1.apartments.com/i2/KmFi8QVcVU4o1SdD-LA33nKoGXTp35fWYneewEvblu4/116/presidential-towers-chicago-il-interior-photo.jpg?p=1"
+        alt="Third slide"
+      />
+    </div>
+  </div>
+
+  <!-- Previous Button -->
+  <button
     class="carousel-control-prev"
     type="button"
     data-bs-target="#carouselExampleControls"
     data-bs-slide="prev"
   >
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span
+      class="carousel-control-prev-icon bg-dark rounded-circle p-2"
+      aria-hidden="true"
+    ></span>
     <span class="visually-hidden">Previous</span>
   </button>
+
+  <!-- Next Button -->
   <button
     class="carousel-control-next"
     type="button"
     data-bs-target="#carouselExampleControls"
     data-bs-slide="next"
   >
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span
+      class="carousel-control-next-icon bg-dark rounded-circle p-2"
+      aria-hidden="true"
+    ></span>
     <span class="visually-hidden">Next</span>
   </button>
-
-  
- </div>
- 
+</div>
