fix(dev):fix floor plan component

--- a/property-rental-main-app/src/app/components/contact-property/contact-property.component.html
+++ b/property-rental-main-app/src/app/components/contact-property/contact-property.component.html
@@ -25,7 +25,7 @@
       
       <!-- Phone Number -->
       <h2 class="text-center text-secondary mt-4">
-        {{propertyContactData.phone}}
+        {{propertyContactData.phone || 'Number Not Available'}}
       </h2>
     </div>
   </div>
