--- a/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
+++ b/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="mt-1 text-muted">{{ apartmentData.propertyArea }}</div>
       <div class="d-flex gap-3 mt-4">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" routerLink="PropertyMediaView">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" routerLink="PropertyMediaView/{{apartmentData.id}}">
           Floor media
         </button>
       </div>
