--- a/property-rental-main-app/src/app/components/contact-property/contact-property.component.html
+++ b/property-rental-main-app/src/app/components/contact-property/contact-property.component.html
@@ -4,7 +4,7 @@
     <div id="contactLead" class="d-flex flex-column justify-content-between h-100">
       <!-- Heading -->
       <h2 class="text-center text-secondary mb-3">
-        {{propertyContactData.heading}}
+        {{propertyContactData.heading || "Not Available"}}
       </h2>
       
       <!-- Buttons -->
