--- a/property-rental-main-app/src/app/components/footer/footer.component.html
+++ b/property-rental-main-app/src/app/components/footer/footer.component.html
@@ -6,23 +6,23 @@
                 <div *ngFor="let main of mains" class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                     <div *ngIf="main.isEnabled">
                         <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fas fa-gem me-3"></i>{{ main.header }}
+                            <i class="fas fa-gem me-3"></i>{{ main.header || "Not Available" }}
                         </h6>
                         <p>
-                            {{ main.title }}
+                            {{ main.title  || "Not Available"}}
                         </p>
                     </div>
                 </div>
                 <div *ngFor="let section of sections" class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <h6 *ngIf="section.isEnabled" class="text-uppercase fw-bold mb-4">{{ section.title }}</h6>
+                    <h6 *ngIf="section.isEnabled" class="text-uppercase fw-bold mb-4">{{ section.title || "Not Available" }}</h6>
                     <p *ngFor="let sectionname of section.links">
-                        <a *ngIf="sectionname.isEnabled" [routerLink]="sectionname.routerlink" class="text-reset">{{ sectionname.name }}</a>
+                        <a *ngIf="sectionname.isEnabled" [routerLink]="sectionname.routerlink" class="text-reset">{{ sectionname.name  || "Not Available"}}</a>
                     </p>
                 </div>               
             </div>
         </div>
     </section>
     <div *ngFor="let main of mains" class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05)">
-        {{ main.footerend }}
+        {{ main.footerend  || "Not Available"}}
     </div>
 </footer>
