--- a/property-rental-main-app/src/app/components/nav-bar/nav-bar.component.html
+++ b/property-rental-main-app/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="bg-dark">
-  <div class="container d-flex align-items-center justify-content-center h-100 text-white">
+  <div class="container d-flex align-items-center justify-content-center  text-white">
     <a 
       *ngFor="let nav of navbarData"
       href="#" 
