--- a/property-rental-main-app/src/app/components/page-not-found/page-not-found.component.html
+++ b/property-rental-main-app/src/app/components/page-not-found/page-not-found.component.html
@@ -1,19 +1,19 @@
-<section class="page_404">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="col-sm-10 col-sm-offset-1 text-center" *ngFor="let pageData of pagenotfoundData">
-          <div class="four_zero_four_bg">
-            <h1 class="text-center">{{pageData.heading}}</h1>
-          </div>
+<section class="page_404 d-flex align-items-center vh-100">
+  <div class="container text-center">
+    <div class="row justify-content-center">
+      <div class="col-md-8" *ngFor="let pageData of pagenotfoundData">
+        <!-- 404 Background -->
+        <div class="four_zero_four_bg mb-4">
+          <h1 class="display-1 fw-bold text-primary">{{ pageData.heading }}</h1>
+        </div>
 
-          <div class="contant_box_404">
-            <h3 class="h2">{{pageData.title1}}</h3>
-
-            <p>{{pageData.title2}}</p>
-
-            <a [routerLink]="pageData.redirectTo" class="link_404">{{pageData.btn}}</a>
-          </div>
+        <!-- Content Box -->
+        <div class="contant_box_404">
+          <h3 class="h2 fw-semibold mb-3 text-dark">{{ pageData.title1 }}</h3>
+          <p class="text-muted mb-4">{{ pageData.title2 }}</p>
+          <a [routerLink]="pageData.redirectTo" class="btn btn-primary px-5 py-2 rounded-pill shadow">
+            {{ pageData.btn }}
+          </a>
         </div>
       </div>
     </div>
