fix(dev):working on floorplan to make dynamic

--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -1,6 +1,6 @@
 <div class="relative">
   <div class="w-full h-[70vh] overflow-hidden">
-    <app-image-carousel [data]="product"></app-image-carousel>
+    <app-image-carousel [data]="propertymedias"></app-image-carousel>
   </div>
   <!-- property data -->
   
