--- a/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
+++ b/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
@@ -2,7 +2,7 @@
     <!-- Header Section -->
     <div class="flex justify-between items-center border-b pb-3">
         <div class="text-center w-full">
-            <h1 class="fw-bold text-xl text-gray-800">The Residences at NewCity</h1>
+            <h1 class="fw-bold text-xl text-gray-800">{{propertyName}}</h1>
         </div>
         <div class="absolute right-4">
             <button type="button" class="btn btn-outline-secondary rounded-pill px-4" routerLink="/propertydetails/"
@@ -31,20 +31,23 @@
         </ul>
 
         <!-- Tab Content -->
-        <div class="tab-content bg-light rounded-lg shadow-sm p-3" id="myTabContent">
-            <div class="tab-pane fade show active" id="photo" role="tabpanel" aria-labelledby="photo-tab">
+<div class="tab-content bg-light rounded-lg shadow-sm p-3" id="myTabContent">
+  <div
+    class="tab-pane fade show active"
+    id="photo"
+    role="tabpanel"
+    aria-labelledby="photo-tab"
+  >
+    <div class="carousel-container">
+      <app-image-carousel [data]="propertyImages"></app-image-carousel>
+    </div>
+  </div>
+  <div class="tab-pane fade" id="floor" role="tabpanel" aria-labelledby="floor-tab">
+    <div class="carousel-container">
+      <app-image-carousel [data]="propertyFloorPlan"></app-image-carousel>
+    </div>
+  </div>
+</div>
 
-
-                <app-image-carousel ></app-image-carousel>
-
-            </div>
-            <div class="tab-pane fade" id="floor" role="tabpanel" aria-labelledby="floor-tab">
-
-
-                <app-image-carousel ></app-image-carousel>
-
-
-            </div>
-        </div>
     </div>
 </div>
