--- a/property-rental-main-app/src/app/components/signup/signup.component.html
+++ b/property-rental-main-app/src/app/components/signup/signup.component.html
@@ -65,7 +65,7 @@
         </form>
         
         <div class="text-xs text-center mt-4">
-          <p>By registering, I accept the Cityscape.com <a href="#" class="text-blue-500">Terms of Use</a>.</p>
+          <p>By registering, I accept the Cityscape.com <a href="#" class="text-blue-500" [routerLink]="[]">Terms of Use</a>.</p>
         </div>
       </div>
       <div class="modal-footer">
