--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -27,7 +27,7 @@
       </div>
     </div>
   
-  <app-contact-property [propertyContact]="contactpropertyboxs"></app-contact-property>
+  <app-contact-property [propertyContact]="contactpropertyboxs" [propertyHeading]="product"></app-contact-property>
   </section>
   
 </div>
