--- a/property-rental-main-app/src/app/components/image-carousel/image-carousel.component.html
+++ b/property-rental-main-app/src/app/components/image-carousel/image-carousel.component.html
@@ -1,14 +1,14 @@
-<div *ngIf="imageCarousel.propertyImages.length" id="carousel" class="carousel slide h-100" data-bs-ride="carousel">
+<div *ngIf="imageCarousel" [id]="imageCarousel.id" class="carousel slide h-100" data-bs-ride="carousel">
   <div class="carousel-inner h-100">
-    <div *ngFor="let image of imageCarousel.propertyImages; let i = index" class="carousel-item h-100" [ngClass]="{ 'active': i === 0 }">
+    <div *ngFor="let image of imageCarousel.images; let i = index" class="carousel-item h-100" [ngClass]="{ 'active': i === 0 }">
       <img [src]="image" class="d-block w-100 h-100" alt="..." />
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" [attr.data-bs-target]="'#'+imageCarousel.id" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" [attr.data-bs-target]="'#'+imageCarousel.id" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
