fix(rjk):add dynamic styling in image carousel componet

--- a/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
+++ b/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
@@ -23,7 +23,7 @@
     </div>
 </div>
 <app-request-tourform></app-request-tourform> -->
-
+    
 <div class="card property-card">
     <!-- Card Header -->
     <div class="card-header d-flex align-items-center">
@@ -41,7 +41,7 @@
     <div class="card-content d-flex">
       <!-- Image Carousel -->
       <div class="card-image">
-        <app-image-carousel [data]="propertyCard.propertyImgGallery"></app-image-carousel>
+        <app-image-carousel [data]="propertyCard.propertyImgGallery" [imageStyle]="carouselImageStyle"></app-image-carousel>
       </div>
   
       <!-- Property Info -->
