--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -1,7 +1,7 @@
 <div class="relative">
   <div class="w-full h-[70vh] overflow-hidden">
     <!-- {{propertyImgGallery|json}} -->
-    <app-image-carousel [data]="propertyImgGallery"></app-image-carousel>
+    <app-image-carousel [data]="propertyImgGallery" [imageStyle]="carouselImageStyle"></app-image-carousel>
   </div>
 
   <!-- property data -->
@@ -32,3 +32,4 @@
   </section>
 
 </div>
+
