--- a/property-rental-main-app/src/app/components/image-carousel/image-carousel.component.html
+++ b/property-rental-main-app/src/app/components/image-carousel/image-carousel.component.html
@@ -1,15 +1,22 @@
-<div *ngIf="imageCarousel" [id]="imageCarousel.id" class="carousel slide"  (mouseenter)="stopCarousel()" (mouseleave)="startCarousel()" [attr.data-bs-ride]="imageCarousel.id">
+<div *ngIf="imageCarousel" [id]="imageCarousel.id" class="carousel slide" 
+     (mouseenter)="stopCarousel()" 
+     (mouseleave)="startCarousel()" 
+     [attr.data-bs-ride]="imageCarousel.id">
   <div class="carousel-inner">
-    <div *ngFor="let image of imageCarousel.images; let i = index" class="carousel-item h-100" [ngClass]="{ 'active': i === currentIndex }">
-      <img [src]="image.url" class="d-block w-100 h-100" [alt]="image.alt || 'Image'"/>
+    <div *ngFor="let image of imageCarousel.images; let i = index" 
+         class="carousel-item h-100" 
+         [ngClass]="{ 'active': i === currentIndex }">
+      <img [src]="image.url" class="" [alt]="image.alt || 'Image'" [style]="imageCarouselStyle">
     </div>
   </div>
   <button class="carousel-control-prev" (click)="previousImage()" role="button" aria-label="Previous">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" (click)="nextImage()"  role="button" aria-label="Next">
+  <button class="carousel-control-next" (click)="nextImage()" role="button" aria-label="Next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>  
+</div>
+
+
