--- a/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.css
+++ b/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.css
@@ -2,14 +2,11 @@
   display: flex; /* Enables Flexbox */
   justify-content: center; /* Centers horizontally */
   align-items: center; /* Centers vertically */
-  width: 600px; /* Set the desired width */
-  height: 400px; /* Set the desired height */
+  width: 80vh; /* Set the desired width */
+  height: 80vh; /* Set the desired height */
   margin: auto; /* Centers the container itself if needed */ 
 }
 
-app-image-carousel {
-  width: 100%;
-  height: 100%;
-  display: block;
+.tab-content {
+  min-height: 300px; /* Ensures the content remains consistent for different tabs */
 }
-  
