--- a/property-rental-main-app/src/app/components/show-property-cards/show-property-cards.component.html
+++ b/property-rental-main-app/src/app/components/show-property-cards/show-property-cards.component.html
@@ -1,5 +1,4 @@
-<div
-  class="background apartment-list h-screen flex flex-col gap-3 absolute top-[6.3rem]  right-0  p-4  overflow-x-auto">
+<div class="background apartment-list h-screen flex flex-col gap-3 absolute top-[6 rem]  right-0  p-4  overflow-x-auto">
   <input [(ngModel)]="searchText" class="form-control mr-sm-2 w-full" type="search" placeholder="Find your property"
     aria-label="Search">
   <app-property-cards
