--- a/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
+++ b/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
@@ -1,11 +1,11 @@
-<div class="main ">
+<div class="row">
     <app-sub-navbar></app-sub-navbar>
-<section class="">
-    <div class="map">
+</div>
+<div class="row">
+    <div class="col-sm-8">
         <app-map></app-map>
     </div>
-    <div class="content ">
-       <app-show-property-cards></app-show-property-cards>
+    <div class="col-sm-4">
+        <app-show-property-cards></app-show-property-cards>
     </div>
-</section>
 </div>
