--- a/property-rental-main-app/src/app/app.component.html
+++ b/property-rental-main-app/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="row">
+    <app-nav-bar></app-nav-bar>
+</div>
+<div class="row">
+    <router-outlet></router-outlet>
+</div>
+<div class="row">
+    <app-footer></app-footer>
+</div>
